--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           <p>᲼         </p>
           <p>/ wsp nigga's \</p>
            <p>‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾</p>
-           <p>᲼         </p>
+           <p>⬇         </p>
           <p>/ check my socials. \</p>
           <p>‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾</p>
         </div>
@@ -327,13 +327,13 @@
   
 
     <!-- Background music -->
-    <audio id="bgMusic" src="https://raw.githubusercontent.com/lqrpingfunds/wimp/refs/heads/main/lovers.mp3" preload="auto"></audio>
+    <audio id="bgMusic" src="https://raw.githubusercontent.com/lqrpingfunds/mev/refs/heads/main/loversss.mp3" preload="auto"></audio>
   </div>
 
   <!-- Modern minimal progress bar -->
   <div id="nowPlaying">
     <div id="nowPlayingTop">
-      <div id="songTitle">lovers - babyteen | Made by mev</div>
+      <div id="songTitle">lovers - babyteen</div>
       <div id="songTime">0:00 / 0:00</div>
     </div>
     <div id="progressBarContainer">
@@ -389,3 +389,4 @@
 
 </body>
 </html>
+
